Resolve trending/announcement box's big gap
Changed the grid to 2 columns and 1 row and put the announcement and
trending into a flex box

--- a/style.css
+++ b/style.css
@@ -190,8 +190,7 @@ h1 {
 .content {
   background-color: var(--clr-primary-400);
   display: grid;
-  grid-template-columns: 3fr 1fr;
-  grid-auto-rows: min-content;
+  grid-template-columns: 3fr minmax(230px, 350px);
   gap: 1rem;
   padding: 2rem 1rem;
 }
@@ -206,7 +205,7 @@ h1 {
 
 .card-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
   grid-auto-rows: 300px;
   gap: 1.5rem;
 }
